update publish logic

--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -39,13 +39,15 @@ jobs:
           --volume $GITHUB_WORKSPACE/sdk:/local/ \
           --volume $GITHUB_WORKSPACE/generator/${{ github.event.inputs.generator }}:/sdk/${{ github.event.inputs.generator }} \
           openapi-generator:latest generate \
-          --input-spec ${{ secrets.URL_TO_OPENAPI_SPEC }} \
+          --input-spec https://api.hmn.saritasa.rocks/api/v1/open-api/schema/ \
           --config /sdk/${{ github.event.inputs.generator }} \
+          --git-user-id ${{ github.actor }} \
+          --git-repo-id ${{ github.event.repository.name }} \
 
       - name: Check SDK version
         id: check_sdk_version
         run: |
-           echo "sdk_version=$(wget -q -O - ${{ secrets.URL_TO_OPENAPI_SPEC }} | grep -oP '(?<=version: )([\d\.]+)')" >> $GITHUB_OUTPUT
+           echo "sdk_version=$(cat ./sdk/package.json | grep -oP '(?<=version: )([\d\.]+)')" >> $GITHUB_OUTPUT
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
