--- a/generator/angular-generator-config.json
+++ b/generator/angular-generator-config.json
@@ -2,6 +2,7 @@
   "generatorName": "typescript-angular",
   "skipValidateSpec": true,
   "additionalProperties": {
+    "npmName": "@sakhnovict/sdk",
     "fileNaming": "kebab-case",
     "stringEnums": true,
     "modelSuffix": "Dto",
