--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,20 +1,20 @@
-# name: NPM Package
+name: NPM Package
 
-# on:
-#   workflow_run:
-#     workflows: ["Generate SDK"]
-#     types:
-#       - completed
+on:
+  workflow_run:
+    workflows: ["Generate SDK"]
+    types:
+      - completed
 
-# jobs:
-#   publish:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
-#           registry-url: https://registry.npmjs.org/
-#       - run: npm publish
-#         env:
-#           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+jobs:
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
