--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
-      - run: npm publish sdk
+      - run: cd sdk && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
